--- a/src/app/core/components/sign-up/sign-up.component.scss
+++ b/src/app/core/components/sign-up/sign-up.component.scss
@@ -38,7 +38,7 @@ a:hover {
 
 .error-message {
     margin: 0;
-    color: rgb(255, 82, 82);
+    color: rgb(255, 115, 115);
     font-size: x-small;
 }
 
@@ -47,9 +47,9 @@ a:hover {
 }
 
 .invalid-input {
-    border: solid 1px rgb(255, 82, 82);
+    border: solid 1px rgb(255, 115, 115);
     border-radius: 3px;
 }
 .invalid-input:focus {
-    outline: solid 2px rgb(255, 82, 82);
+    outline: solid 2px rgb(255, 115, 115);
 }
