--- a/src/app/note-components/components/notes-list/notes-list.component.scss
+++ b/src/app/note-components/components/notes-list/notes-list.component.scss
@@ -1,10 +1,14 @@
 .side-bar {
-    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    padding: 5px 0px 5px 5px;
     background-color: white;
-    box-shadow: lightgrey 4px 10px 20px;
-    height: 100vh;
-    width: 250px;
-    z-index: 999;
+    box-shadow: #d3d3d3 4px 10px 20px;
+    height: 100%;
+    #notes-list {
+        overflow: auto;
+    }
     #notes-list-header {
         display: flex;
         justify-content: space-between;
