--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,18 @@ button, input, select {
     font-family: inherit;
 }
 
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-track {
+    background: none;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(75, 75, 75);
+    border-radius: 10px;
+  }
 
 .nc-simple-button {
     padding: 5px;
